feat: Add counting code to banners dynamic fields(allFamilyMembersUploadedDays, allFamilyMembersUploadedStreaks) and Impl getBanner API with a lot of comments