@@ -19,6 +19,7 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -108,10 +109,14 @@ public class MemberService {
         return new PageImpl<>(familyMemberProfiles, memberPage.getPageable(), memberPage.getTotalElements());
     }
 
+    public long countFamilyMembersByFamilyIdBefore(String familyId, LocalDate localDate) {
+        return memberRepository.countByFamilyIdAndFamilyJoinedAtBefore(familyId, localDate);
+    }
+
     private List<FamilyMemberProfileResponse> createFamilyMemberProfiles(List<Member> members) {
         return members.stream()
                 .map(FamilyMemberProfileResponse::of)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void deleteAllSocialMembersByMember(String memberId) {
